--- a/README.Rmd
+++ b/README.Rmd
@@ -13,9 +13,11 @@ knitr::opts_chunk$set(
 )
 ```
 
-# LCA
+# LCA: Pet Food Supply Chain
 
 
 The goal of rivertopo is to ...
 
-## Example
+## Hightlight
+
+## Workflow
