--- a/code_descriptData.ipynb
+++ b/code_descriptData.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -47,20 +47,20 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv(\"data/dat_311111_1M.csv\")\n",
+    "data = pd.read_csv(\"data/dat_311111_1M_v2.csv\")\n",
     "data = data.drop([\"Unnamed: 0\"], axis = 1)\n",
     "data.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "(405, 40)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -132,9 +132,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Government and special</td>\n",
+       "      <td>Government and special</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.008643</td>\n",
        "      <td>0.003931</td>\n",
@@ -156,9 +156,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Retail trade</td>\n",
+       "      <td>Retail trade</td>\n",
        "      <td>400000.0</td>\n",
        "      <td>0.002689</td>\n",
        "      <td>0.001830</td>\n",
@@ -180,7 +180,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>48.0</td>\n",
+       "      <td>48</td>\n",
        "      <td>Transportation and Warehousing</td>\n",
        "      <td>Transportation and Warehousing</td>\n",
        "      <td>480000.0</td>\n",
@@ -204,7 +204,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>52.0</td>\n",
+       "      <td>52</td>\n",
        "      <td>Finance and Insurance</td>\n",
        "      <td>Finance and Insurance</td>\n",
        "      <td>520000.0</td>\n",
@@ -228,7 +228,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>11</td>\n",
        "      <td>Agriculture, Forestry, Fishing and Hunting</td>\n",
        "      <td>Animal Production</td>\n",
        "      <td>112000.0</td>\n",
@@ -256,19 +256,19 @@
        "</div>"
       ],
       "text/plain": [
-       "   Sector                                 Description  \\\n",
-       "0     NaN                                         NaN   \n",
-       "1     NaN                                         NaN   \n",
-       "2    48.0              Transportation and Warehousing   \n",
-       "3    52.0                       Finance and Insurance   \n",
-       "4    11.0  Agriculture, Forestry, Fishing and Hunting   \n",
+       "  Sector                                 Description  \\\n",
+       "0      0                      Government and special   \n",
+       "1      4                                Retail trade   \n",
+       "2     48              Transportation and Warehousing   \n",
+       "3     52                       Finance and Insurance   \n",
+       "4     11  Agriculture, Forestry, Fishing and Hunting   \n",
        "\n",
-       "                         name_sub  Sector_sub  Total Economic mill dollar  \\\n",
-       "0                             NaN         0.0                    0.008643   \n",
-       "1                             NaN    400000.0                    0.002689   \n",
-       "2  Transportation and Warehousing    480000.0                    0.006654   \n",
-       "3           Finance and Insurance    520000.0                    0.030743   \n",
-       "4               Animal Production    112000.0                    0.012999   \n",
+       "                         name_sub Sector_sub  Total Economic mill dollar  \\\n",
+       "0          Government and special        0.0                    0.008643   \n",
+       "1                    Retail trade   400000.0                    0.002689   \n",
+       "2  Transportation and Warehousing   480000.0                    0.006654   \n",
+       "3           Finance and Insurance   520000.0                    0.030743   \n",
+       "4               Animal Production   112000.0                    0.012999   \n",
        "\n",
        "   Total value Added mill dollar  Employee Com mill dollar  \\\n",
        "0                       0.003931                  0.003352   \n",
@@ -308,12 +308,17 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "data['Sector'] = data['Sector'].astype(str)\n",
+    "data['Description'] = data['Description'].astype(str)\n",
+    "data['name_sub'] = data['name_sub'].astype(str)\n",
+    "data['Sector_sub'] = data['Sector_sub'].astype(str)\n",
+    "\n",
     "data.head()"
    ]
   },
