--- a/README.Rmd
+++ b/README.Rmd
@@ -43,10 +43,9 @@ The goal of this project is to study the environmental impact of a certain amoun
 </center>
 
 # Data description
-What kind of data is avialble? How is your data collected? Are there any concerns about the data? Which data is the most relevant? Is the data easy to acccess? Will the data change over time? What needs to be done to the data to get it ready for any downstream analysis?
-
-The dataset for this project is the first pass life cycle assessment results for cat and dog food manufacturing. It provides the environmental impact information into the pet food supply chain. The LCA data was generated through EIO-LCA website(http://www.eiolca.net/cgi-bin/dft/use.pl).  The model for getting the LCA data is US 2002 producer price benchmark. 
-
+The dataset for this project is the first pass life cycle assessment results for cat and dog food manufacturing. It provides the environmental impact information into the pet food supply chain. The LCA data was generated through EIO-LCA website(http://www.eiolca.net/cgi-bin/dft/use.pl).  The model for getting the LCA data is US 2002 producer price benchmark. In order to get the dog and cat food manufacturing LCA data, the user needs to select “Food beverage and tobacco” sector group, dog and cat food manufacturing sector and then the amount of economic activity for this sector(e.g. 1 millon dollars). After setting up the sector and economic parameters, The user could select different economical and environmental impact to get the LCA results.
+The LCA results are ready for downloading as excel files. The raw data was lacking the columns name for different impact feature and index for identifying the different sectors and sector group. The web scraping is necessary for the columns name and NAICS sector code. 
+ 
 ```{r include=FALSE, }
 library(dplyr)
 library(purrr)
@@ -82,6 +81,8 @@ TOX <- dat %>% select(Fugitive.kg, Stack.kg, Total.Air.kg, Surface.water.kg, U_g
 ys <- cbind(CPA, GHG, TOX)
 psych::describe(ys)
 ```
+
+# Clustering for the data
 
 # Fit Models
 
