change log10() to log, so that the interpretation of the coef is the elasitic in economics

--- a/README.Rmd
+++ b/README.Rmd
@@ -43,10 +43,9 @@ The goal of this project is to study the environmental impact of a certain amoun
 </center>
 
 # Data description
-What kind of data is avialble? How is your data collected? Are there any concerns about the data? Which data is the most relevant? Is the data easy to acccess? Will the data change over time? What needs to be done to the data to get it ready for any downstream analysis?
-
-The dataset for this project is the first pass life cycle assessment results for cat and dog food manufacturing. It provides the environmental impact information into the pet food supply chain. The LCA data was generated through EIO-LCA website(http://www.eiolca.net/cgi-bin/dft/use.pl).  The model for getting the LCA data is US 2002 producer price benchmark. 
-
+The dataset for this project is the first pass life cycle assessment results for cat and dog food manufacturing. It provides the environmental impact information into the pet food supply chain. The LCA data was generated through EIO-LCA website(http://www.eiolca.net/cgi-bin/dft/use.pl).  The model for getting the LCA data is US 2002 producer price benchmark. In order to get the dog and cat food manufacturing LCA data, the user needs to select “Food beverage and tobacco” sector group, dog and cat food manufacturing sector and then the amount of economic activity for this sector(e.g. 1 millon dollars). After setting up the sector and economic parameters, The user could select different economical and environmental impact to get the LCA results.
+The LCA results are ready for downloading as excel files. The raw data was lacking the columns name for different impact feature and index for identifying the different sectors and sector group. The web scraping is necessary for the columns name and NAICS sector code. 
+ 
 ```{r include=FALSE, }
 library(dplyr)
 library(purrr)
@@ -60,12 +59,10 @@ After webscaping, combinding the raw data, and manually making minor modificatio
 ```{r}
 # data input
 dat <- read.csv("data/dat_311111_1M_v2.csv")
-
 # Input columns 
 X <- dat %>% 
   select(Coal.TJ, NatGase.TJ, Petrol.TJ, Bio.Waste.TJ, NonFossElec.TJ, Water.Withdrawals.Kgal)
 psych::describe(X)
-
 ```
 
 ```{r}
@@ -83,6 +80,8 @@ ys <- cbind(CPA, GHG, TOX)
 psych::describe(ys)
 ```
 
+# Clustering for the data
+
 # Fit Models
 
 ## user-define function
@@ -98,12 +97,11 @@ makedata_map <- function(target_nm, dat){
   # retin all inf by log(x + min/100)
   #Xy <- cbind(dat %>% select(Sector) %>% mutate(Sector= Sector %>% as.factor()), log10(Xy + min(Xy[Xy!=0])/100)) 
   # remove all inf= log(0)
-  Xy <- cbind(dat %>% select(Sector), log10(Xy)) 
+  Xy <- cbind(dat %>% select(Sector), log(Xy)) 
   Xy <- Xy[!is.infinite(rowSums(Xy)),] %>% mutate(Sector= Sector %>% as.factor())
   colnames(Xy) <- colnames(Xy) %>% stringr::str_replace_all("\\.","") 
   return(Xy)
 }
-
 bind_coef_star <- function(x) {
   if (stringr::str_detect(x[2] , "\\*")) {
     paste0(x[1], "(",x[2], ")")
@@ -119,7 +117,6 @@ bind_coef_star <- function(x) {
 ```{r}
 # create a dataframe with a column with impact variable names 
 target_list <- tibble(target = c(colnames(CPA),colnames(GHG),colnames(TOX))); target_list
-
 # model selection for each impact variable
 bestglm_list <- target_list %>% 
   mutate(data = target %>% 
@@ -134,7 +131,6 @@ bestglm_list <- target_list %>%
   mutate(anv = best_model %>% map(anova)) %>% 
   mutate(statisics = best_model %>% purrr::map(.f = function(m) broom::glance(m))) %>% 
   tidyr::unnest(statisics)
-
 # extract coefficient from the best model of each impact variable
 coef_list <- bestglm_list %>% 
   mutate(coefs = best_model %>% purrr::map(.f=broom::tidy)) %>% 
@@ -142,7 +138,6 @@ coef_list <- bestglm_list %>%
   tidyr::unnest(coefs) %>% 
   select(target, term, estimate) %>% 
   tidyr::spread(key= term, value = estimate)
-
 # extract p-value for each paramters of the best model of each impact variable
 signif_list <- bestglm_list %>% 
   mutate(coefs = best_model %>% purrr::map(.f=broom::tidy)) %>% 
@@ -150,7 +145,6 @@ signif_list <- bestglm_list %>%
   tidyr::unnest(coefs) %>% 
   select(target, term, p.value) %>% 
   tidyr::spread(key= term, value = p.value)
-
 # combind coefficient and p-value to result in a tidy table of the result
 datArray <- abind::abind(coef_list %>% 
                            select(-target) %>% 
@@ -162,7 +156,6 @@ datArray <- abind::abind(coef_list %>%
 coef_signif_list <- bestglm_list %>% 
   select(target, r.squared, adj.r.squared, p.value) %>% 
   cbind(apply(datArray,1:2, bind_coef_star) %>% as_tibble())
-
 # result
 knitr::kable(coef_signif_list)
 ```
@@ -196,17 +189,13 @@ good_lm$target
 # SO2.t: Emissions of Sulfur Dioxide to Air from each sector. t = meric tons 
 # Total.t.CO2e: Global Warming Potential (GWP) is a weighting of greenhouse gas emissions into the air from the production of each sector. Weighting factors are 100-year GWP values from the IPCC Second Assessment Report (IPCC 2001). t CO2e = metric tons of CO2 equivalent emissions. 
 # CO2.Fossil.t.CO2e	C: Emissions of Carbon Dioxide (CO2) into the air from each sector from fossil fuel combustion sources. t CO2e = metric tons of CO2 equivalent.
-
 par(mfrow=c(1,2))
 plot(good_lm$data[[1]][,ncol(good_lm$data[[1]])])
 plot(good_lm$data[[1]][,1], good_lm$data[[1]][,ncol(good_lm$data[[1]])])
-
 plot(good_lm$data[[2]][,ncol(good_lm$data[[2]])])
 plot(good_lm$data[[2]][,1], good_lm$data[[2]][,ncol(good_lm$data[[2]])])
-
 plot(good_lm$data[[3]][,ncol(good_lm$data[[3]])])
 plot(good_lm$data[[3]][,1], good_lm$data[[3]][,ncol(good_lm$data[[3]])])
-
 plot(good_lm$data[[4]][,ncol(good_lm$data[[4]])])
 plot(good_lm$data[[4]][,1], good_lm$data[[4]][,ncol(good_lm$data[[4]])])
 ```
