--- a/README.Rmd
+++ b/README.Rmd
@@ -62,7 +62,7 @@ dat <- read.csv("data/dat_311111_1M_v2.csv")
 # Input columns 
 X <- dat %>% 
   select(Coal.TJ, NatGase.TJ, Petrol.TJ, Bio.Waste.TJ, NonFossElec.TJ, Water.Withdrawals.Kgal)
-psych::describe(X) %>% knitr::kable()
+psych::describe(X) %>% knitr::kable(format = "markdown") 
 ```
 
 ```{r}
@@ -77,7 +77,7 @@ CPA <- dat %>% select(CO.t, NH3.t, NOx.t, PM10.t, PM2.5.t, SO2.t, VOC.t)
 GHG <- dat %>% select(Total.t.CO2e, CO2.Fossil.t.CO2e, CO2.Process.t.CO2e, CH4.t.CO2e, HFC.PFCs.t.CO2e)
 TOX <- dat %>% select(Fugitive.kg, Stack.kg, Total.Air.kg, Surface.water.kg, U_ground.Water.kg, Land.kg, Offiste.kg, POTW.Metal.kg)
 ys <- cbind(CPA, GHG, TOX)
-psych::describe(ys) %>% knitr::kable()
+psych::describe(ys) %>% knitr::kable(format = "markdown") 
 ```
 
 # Clustering for the data
@@ -116,7 +116,8 @@ bind_coef_star <- function(x) {
 ## Linear Regression Modeling with log10 Transformation on Input and Output
 ```{r}
 # create a dataframe with a column with impact variable names 
-target_list <- tibble(target = c(colnames(CPA),colnames(GHG),colnames(TOX))); target_list
+target_list <- tibble(target = c(colnames(CPA),colnames(GHG),colnames(TOX))); target_list %>% flatten() %>% unlist()
+
 # model selection for each impact variable
 bestglm_list <- target_list %>% 
   mutate(data = target %>% 
@@ -156,8 +157,10 @@ datArray <- abind::abind(coef_list %>%
 coef_signif_list <- bestglm_list %>% 
   select(target, r.squared, adj.r.squared, p.value) %>% 
   cbind(apply(datArray,1:2, bind_coef_star) %>% as_tibble())
+
 # result
-coef_signif_list %>% arrange(desc(p.value)) %>% knitr::kable()
+coef_signif_list$sum_elastic <- coef_list[,3:8] %>% rowSums(na.rm = TRUE)
+coef_signif_list %>% arrange(desc(adj.r.squared)) %>% knitr::kable(format = "markdown") 
 ```
 
 # Communciate and visualize the results
