--- a/README.Rmd
+++ b/README.Rmd
@@ -111,7 +111,7 @@ TOX <- dat %>% select(Fugitive.kg, Stack.kg, Total.Air.kg, Surface.water.kg, U_g
   calculate_formula_replace_nm(formula = y~x*10^6, pattern= "\\.kg", replacement= ".mg")
 resource <- dat %>% select(Coal.TJ, NatGase.TJ, Petrol.TJ,Bio.Waste.TJ, NonFossElec.TJ, Water.Withdrawals.Kgal) %>% 
   calculate_formula_replace_nm(formula = y~x*10^6, pattern= "\\.TJ", replacement= ".MJ")
-ID <- dat %>% select(Sector, Description, name_sub, Sector_sub) %>% mutate_all(is.factor)
+ID <- dat %>% select(Sector, Description, name_sub, Sector_sub) %>% mutate_all(as.factor)
 dat <- cbind(ID, CPA, GHG, TOX, resource)
 
 ys <- cbind(CPA, GHG, TOX)
