--- a/README.Rmd
+++ b/README.Rmd
@@ -128,7 +128,7 @@ psych::pairs.panels(log(resource+1) %>% cbind(log(dat$SO2.g)),
 ```{r}
 library("knitr")
 library("devtools")
-url<-"https://plot.ly/~weiquanluo/1/.embed?width=550&height=550" 
+url<-"https://plot.ly/~weiquanluo/1/embed?width=550&height=550" 
 plotly_iframe <- paste("<center><iframe scrolling='no' seamless='seamless' style='border:none' src='", url, "/800/1200' width='800' height='1200'></iframe></center>", sep = "")
 ```
 
