--- a/README.Rmd
+++ b/README.Rmd
@@ -124,14 +124,8 @@ psych::pairs.panels(log(resource+1),
 ```
 
 Let's take CO2 Equvivalent as the target variable, resource as input variables as example for visulization:
-```{r}
-library("knitr")
-library("devtools")
-url<-"https://plot.ly/~weiquanluo/1/embed?width=550&height=550" 
-plotly_iframe <- paste("<center><iframe scrolling='no' seamless='seamless' style='border:none' src='", url, "/800/1200' width='800' height='1200'></iframe></center>", sep = "")
-```
 
-`r I(plotly_iframe)`
+<iframe width="900" height="800" frameborder="0" scrolling="no" src="https://github.com/WeiquanLuo/LCA-PetFoodSupplyChain/plotly_GHG_TotalCO2.html"></iframe>
 
 # 2. Regression
 
