--- a/README.Rmd
+++ b/README.Rmd
@@ -93,8 +93,6 @@ calculate_formula_replace_nm <- function(data, formula = y~1000*x, pattern= patt
     stats::setNames(stringr::str_replace_all(names(.), pattern= pattern, replacement= replacement )) 
   return(data)
 }
-
-
 # Sort environment impact group and input resouce; 
 # unit convertion to result no 0<.<1; 
 # rename by unit
@@ -123,9 +121,7 @@ psych::pairs.panels(log(resource+1),
                     method = "spearman")
 ```
 
-Let's take CO2 Equvivalent as the target variable, resource as input variables as example for visulization:
-
-[please click here](https://weiquanluo.github.io/img/plotly_GHG_TotalCO2.html)
+Let's take CO2 Equvivalent as the target variable, resource as input variables as example for visulization ( [please click here](https://weiquanluo.github.io/img/plotly_GHG_TotalCO2.html) )
 
 # 2. Regression
 
