--- a/README.Rmd
+++ b/README.Rmd
@@ -18,19 +18,22 @@ knitr::opts_chunk$set(
 )
 ```
 
-# The Question
 
-The goal of this project is to study the environmental impact of a certain amount of production with Economic Input-Output Life Cycle Assessment (EIO-LCA) method, which estimates activities in our economy in the materials and energy resources required for and the environmental impact resulting from. The environmental impacts involove conventional air poluten (CAP), greenhouse gass (GHG), and toix release (TOX). Cradle-to-grave is the full Life Cycle Assessment from resource extraction to use phase and disposal phase. Specificallym, this analysis is base on the Cradle-to-grave EIO-LCA result to further understand how all industrial stages of producing Million Dollars product *in Dog and Cat Food Manufacturing* (code 311111 in NAICS 2002) are different in environmental impact. The study aim to answer the following questions:
+# Background information
+According to the APPA (American Pet Product Association) 2019-2020 pet owner survey, around 84.9 million U.S. households own pet, which is about 67% of the U.S. homes (APPA, 2019). In 2018, the U.S. customer spent 72.56 billion dollars on their pets, of which 30.32 billion dollars is for pet food. From a 2017 U.S. pet owners survey, 2% of dog and cat owners select their pet food based on product claim of sustainable or eco-friendly pet food formula. Although the percentage is low, the interest in the sustainability of the pet food has grown a lot recently. 
 
-1. which industry(s) have larger impact among all industries?
-2. what are the relationship between some impact relative to the input (ie. Energy, water withdraw)?
-3. how the outlier industry(s) behave in linear regression models
+# Interesting question
+What is the scientitifc goal? What would you do if you had all the data? What do you want to predict or estimate? Why is this relevant to ABE researchers or the field? Provide some background on the rationale and relevance.
 
-### Hightlight
+# Hightlight of result
 
 * for dog and cat food Manufacturing, the greatest environmental impacts come frome any raw material production industries such as agricultural farming.
 * most of industries use either NonFossoil Eletrecity or Fossoil Eletrecity
 * for those industries using biowaste as energy source have higher impact in toxic.
+
+# Data description
+The dataset for this project is the first pass life cycle assessment results for cat and dog food manufacturing. It provides the environmental impact information into the pet food supply chain. The LCA data was generated through EIO-LCA website(http://www.eiolca.net/cgi-bin/dft/use.pl).  The model for getting the LCA data is US 2002 producer price benchmark. In order to get the dog and cat food manufacturing LCA data, the user needs to select “Food beverage and tobacco” sector group, dog and cat food manufacturing sector and then the amount of economic activity for this sector(e.g. 1 millon dollars). After setting up the sector and economic parameters, The user could select different economical and environmental impact to get the LCA results.
+The LCA results are ready for downloading as excel files. The raw data was lacking the columns name for different impact feature and index for identifying the different sectors and sector group. The web scraping is necessary for the columns name and NAICS sector code. 
 
 # Workflow
 
@@ -38,10 +41,7 @@ The goal of this project is to study the environmental impact of a certain amoun
 ![EIO-LCA:Pet Food Supply Chain](img/EIO-LCA_ Pet Food Supply Chain.png){width=100%}
 </center>
 
-# 1. Data description
-The dataset for this project is the first pass life cycle assessment results for cat and dog food manufacturing. It provides the environmental impact information into the pet food supply chain. The LCA data was generated through EIO-LCA website(http://www.eiolca.net/cgi-bin/dft/use.pl).  The model for getting the LCA data is US 2002 producer price benchmark. In order to get the dog and cat food manufacturing LCA data, the user needs to select “Food beverage and tobacco” sector group, dog and cat food manufacturing sector and then the amount of economic activity for this sector(e.g. 1 millon dollars). After setting up the sector and economic parameters, The user could select different economical and environmental impact to get the LCA results.
-The LCA results are ready for downloading as excel files. The raw data was lacking the columns name for different impact feature and index for identifying the different sectors and sector group. The web scraping is necessary for the columns name and NAICS sector code. 
- 
+
 ```{r include=FALSE}
 library(dplyr)
 library(purrr)
@@ -50,7 +50,7 @@ library(plotly)
 library(RColorBrewer)
 ```
 
-# 2. Explore the data
+# Explore the data
 
 After webscaping, combinding the raw data, and manually making minor modification, we result a datafarme stored as 'dat_311111_1M_v2.csv.
  
@@ -106,9 +106,9 @@ psych::pairs.panels(log(resource+1),
 
 Let's take CO2 Equvivalent as the target variable, resource as input variables as example for visulization ( [please click here](https://weiquanluo.github.io/img/plotly_GHG_TotalCO2.html) )
 
-# 2. Regression
+# Regression
 
-## 2.1 user-define function
+## user-define function
 ```{r}
 # test: target_nm = "CO.g",  X = resource
 makedata_map <- function(target_nm, dat, X){
@@ -151,7 +151,7 @@ waldtest_map <- function(model, null= NULL){
 }
 ```
 
-## 2.2 Ln-Ln Linear Regression
+## Ln-Ln Linear Regression
 
 ```{r}
 # create a dataframe with a column with impact variable names 
@@ -215,7 +215,7 @@ coef_signif_list %>%
   knitr::kable(format = "markdown") 
 ```
 
-## 2.3 The diagnosis of linear model
+## The diagnosis of linear model
 
 The following linear model with R^2 >0.75
 ```{r}
@@ -233,12 +233,12 @@ Check partial-residual plots for each independent variable
 car::crPlots(bestglm_list$best_model[[2]])
 ```
 
-# 3. Clustering
+# Clustering
 
 
 
-# 4. Result for Total CO2 equivalent
-## 4.1 Impact between Sector 
+# Result for Total CO2 equivalent
+## Impact between Sector 
 
 ```{r}
 # descriptive analysis
@@ -252,4 +252,7 @@ i=2
 good_lm$data[[i]][,ncol(good_lm$data[[i]])] %>% boxplot()
 plot(good_lm$data[[i]][,1], good_lm$data[[i]][,ncol(good_lm$data[[i]])])
 ```
+
+
+# Class Exercise
 
